# broadcast_gate

./: Cargo.toml  Dockerfile  broadcast_gate  settings.json  template.xml
depth_view/: index.html  package-lock.json  package.json  vite.config.ts
depth_view/src/: App.svelte  depth.svelte  details.svelte  ohlc.svelte
src/: constants.rs  distributor.rs  global.rs  input.rs  macros.rs  main.rs  settings.rs  statistics.rs  test.rs  threadpool.rs
src/depth_view/: package-lock.json  package.json
src/distributor/: bse_distributor.rs  mcx_distributor.rs  mod.rs  ncd_distributor.rs  neq_distributor.rs  nfo_distributor.rs
src/output/: counter.rs  depth_view.rs  display.rs  kafka_output.rs  mod.rs  std_out.rs  udp_output.rs  ws.rs
src/types/: mod.rs  packet.rs  safe_hashmap.rs  settings.rs  state.rs  unsafe_hashmap.rs  work.rs
src/types/packet_structures/: bse.rs  depth_output.rs  mcx.rs  mod.rs  ncd.rs  neq.rs  nfo.rs
src/utils/: atomic_utils.rs  byte_utils.rs  mod.rs  time_utils.rs  udp_utils.rs
src/workers/: bse_worker.rs  compressed.rs  mcx_workers.rs  mod.rs  nse_worker.rs  segment_wise.rs  token_wise.rs  uncompressed.rs
