[package]
name = "broadcast_gate"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = "2.6.0"
crossbeam = "0.8.4"
dotenvy = "0.15.7"
lazy_static = "1.5.0"
rdkafka = "0.36.2"
seq-macro = "0.3.5"
serde = "1.0.210"
serde_json = "1.0.128"
socket2 = "0.5.7"
threadpool = "1.8.1"
zerocopy = "0.7.35"
zerocopy-derive = "0.7.35"
