[package]
name = "broadcast_gate"
version = "0.1.0"
edition = "2021"
default-run = "broadcast_gate"

[[bin]]
name = "t"
path = "src/test.rs"

[dependencies]
bitflags = "2.6.0"
crossbeam = "0.8.4"
lazy_static = "1.5.0"
rdkafka = "0.36.2"
serde = { version = "1.0.213", features = ["derive"] }
serde_bytes = "0.11.15"
serde_json = "1.0.132"
socket2 = "0.5.7"
threadpool = "1.8.1"
twiddler = {git="https://github.com/narad-muni/twiddle_rs"}
mylzo = {git="https://github.com/narad-muni/mylzo"}
fastlib = {git="https://github.com/narad-muni/rs-fastlib"}
bytes = "1.8.0"
web-view = { version="0.7.3", optional = true }
serde-big-array = "0.5.1"
tungstenite = "0.24.0"

[profile.release]
strip = true

[features]
depth_view = ["web-view"]
